--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.4",
+    "@types/yargs": "^17.0.33",
     "jsdoc": "^4.0.3",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "yargs": "^17.7.2"
   }
 }
