--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^22.5.4",
+    "@types/node": "^22.5.5",
     "@types/yargs": "^17.0.33",
     "jsdoc": "^4.0.3",
     "nodemon": "^3.1.4",
@@ -25,6 +25,7 @@
     "@octokit/rest": "^21.0.2",
     "dotenv": "^16.4.5",
     "express": "^5.0.0",
+    "pino": "^9.4.0",
     "yargs": "^17.7.2"
   }
 }
