--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/markdownlint": "^0.13.0",
     "@types/node": "^22.5.4",
     "@types/yargs": "^17.0.33",
     "jsdoc": "^4.0.3",
