--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/express": "^4.17.21",
     "@types/markdownlint": "^0.13.0",
     "@types/node": "^22.5.4",
+    "@types/pino": "^7.0.4",
     "@types/yargs": "^17.0.33",
     "jsdoc": "^4.0.3",
     "nodemon": "^3.1.4",
+    "pino-pretty": "^11.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
@@ -26,6 +28,8 @@
     "@octokit/rest": "^21.0.2",
     "dotenv": "^16.4.5",
     "express": "^5.0.0",
+    "markdownlint": "^0.35.0",
+    "pino": "^9.4.0",
     "yargs": "^17.7.2"
   }
 }
