--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node-fetch": "^2.6.11",
     "@types/pino": "^7.0.4",
     "@types/yargs": "^17.0.33",
+    "@vitest/coverage-v8": "^2.1.1",
     "jsdoc": "^4.0.3",
     "nodemon": "^3.1.4",
     "pino-pretty": "^11.2.2",
