--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "npx nodemon src/index.ts",
-    "test": "npx vitest"
+    "test": "npx vitest",
+    "auto-grader-test": "vitest run --silent --coverage --reporter=json --outputFile=vitest-results.json && npx tsc && node dist/utils/extract-results.js"
   },
   "keywords": [],
   "author": "",
